# auto-gen-openapi-in-fastapi

./: .gitignore  README.md  app.py  main.py  pyproject.toml
docs/: openapi.json  openapi.yaml
src/: file_watcher.py  main.py  openapi_generator.py
